adds amqp override field to ImageBuild type
consumed and propagated by ContainerImageBuild controller into ImageBuild
