# pkg/api/hephaestus/v1/zz_generated.deepcopy.go
@@ -53,6 +53,21 @@ func (in *ImageBuild) DeepCopyObject() runtime.Object {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *ImageBuildAMQPOverrides) DeepCopyInto(out *ImageBuildAMQPOverrides) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ImageBuildAMQPOverrides.
+func (in *ImageBuildAMQPOverrides) DeepCopy() *ImageBuildAMQPOverrides {
+	if in == nil {
+		return nil
+	}
+	out := new(ImageBuildAMQPOverrides)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *ImageBuildList) DeepCopyInto(out *ImageBuildList) {
 	*out = *in
 	out.TypeMeta = in.TypeMeta
@@ -103,6 +118,11 @@ func (in *ImageBuildSpec) DeepCopyInto(out *ImageBuildSpec) {
 		for i := range *in {
 			(*in)[i].DeepCopyInto(&(*out)[i])
 		}
+	}
+	if in.AMQPOverrides != nil {
+		in, out := &in.AMQPOverrides, &out.AMQPOverrides
+		*out = new(ImageBuildAMQPOverrides)
+		**out = **in
 	}
 	if in.ImageSizeLimit != nil {
 		in, out := &in.ImageSizeLimit, &out.ImageSizeLimit
